--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.2",
     "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.1",
