--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,9 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5"
   },
