--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,11 @@
     "styled-components": "^6.1.1",
     "typescript": "^4.9.5"
   },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)/"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
