--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,12 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
-    "react-loading": "^2.0.3",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "sass": "^1.75.0",
     "socket.io-client": "^4.7.2",
-    "styled-components": "^6.1.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
