--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.14.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "i": "^0.3.7",
+    "npm": "^10.8.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
