--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,7 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "jest",
-    "eject": "react-scripts eject"
+    "generate:routes": "tsr generate"
   },
   "eslintConfig": {
     "extends": [
