--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.14.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
