--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@owcaofficial/web-analytics": "^1.5.4",
     "@tanstack/react-query": "^5.37.1",
     "@types/node": "^16.18.62",
     "@types/react": "^18.2.37",
