--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
   "scripts": {
     "api:build": "nx build api",
     "api:start": "nx serve api",
+    "api:show": "nx show project api",
+    "api:tsc:check": "tsc -p ./apps/api/tsconfig.app.json",
     "client:build": "nx build client",
     "client:start": "nx serve client",
-    "postinstall": "prisma generate --schema=./apps/api/prisma/schema.prisma",
-    "preapi:start": "prisma migrate deploy --schema=./apps/api/prisma/schema.prisma",
-    "docker:dev": "docker compose --file apps/api/docker-compose-db.dev.yml up -d",
-    "tsr:generate": "tsr generate",
     "client:tsc:check": "tsc -p ./apps/client/tsconfig.app.json",
-    "api:tsc:check": "tsc -p ./apps/api/tsconfig.app.json",
     "client:show": "nx show project client",
-    "api:show": "nx show project api"
+    "tsr:generate": "tsr generate",
+    "docker:dev": "docker compose --file apps/api/docker-compose-db.dev.yml up -d",
+    "lint": "eslint apps/api apps/client",
+    "prettier:check": "prettier . --check",
+    "prettier:fix": "prettier . --write",
+    "prepare": "husky",
+    "postinstall": "prisma generate --schema=./apps/api/prisma/schema.prisma",
+    "preapi:start": "prisma migrate deploy --schema=./apps/api/prisma/schema.prisma"
   },
   "private": true,
   "dependencies": {
@@ -38,6 +42,7 @@
     "class-transformer": "^0.5.1",
     "clsx": "^2.1.1",
     "express-session": "^1.18.0",
+    "husky": "^9.1.6",
     "normalize.css": "^8.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
