potterDB api integration

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ API_URL="localhost:3001"
 DATABASE_URL="postgresql://dev:password@localhost:5432/dev?schema=public"
 JWT_SECRET="secretJWT"
 NODE_ENV="development"
-CORS_ORIGIN="http://localhost:3000
+CORS_ORIGIN="http://localhost:4200"
