--- a/apps/api/docker-compose-db.dev.yml
+++ b/apps/api/docker-compose-db.dev.yml
@@ -11,7 +11,20 @@ services:
       - POSTGRES_DB=dev
     ports:
       - 5432:5432
+  redis:
+    image: 'redis:7'
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/root/redis
+      - redis_data:/usr/local/etc/redis/redis.conf
+    environment:
+      - REDIS_PASSWORD=my-password
+      - REDIS_PORT=6379
+      - REDIS_DATABASES=16
 
 volumes:
   postgres:
+    driver: local
+  redis_data:
     driver: local
