--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@nestjs/axios": "^3.0.3",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
@@ -38,7 +40,9 @@
     "@ts-rest/core": "^3.51.0",
     "@ts-rest/nest": "^3.51.0",
     "@ts-rest/react-query": "^3.51.0",
-    "axios": "^1.6.0",
+    "axios": "^1.7.7",
+    "cache-manager": "^5.7.6",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "clsx": "^2.1.1",
     "express-session": "^1.18.0",
