--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clsx": "^2.1.1",
     "express-session": "^1.18.0",
     "husky": "^9.1.6",
+    "lucide-react": "^0.456.0",
     "normalize.css": "^8.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
